ham menu open and close function

--- a/src/components/Navigation/SearchComponent/SearchBar.css
+++ b/src/components/Navigation/SearchComponent/SearchBar.css
@@ -23,6 +23,10 @@
     color: #555;
   }
   
+  .search-container  input:focus-within{
+    
+  }
+
   @media(max-width:768px){
 
     .search-container{
