--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -27,15 +27,36 @@
   }
 
   .box1 { grid-area: box1; background: #D7D6D7; max-height:500px}
-.box2 { grid-area: box2; background: #D7D6D7; background-image: url("src/assets/images/capguy.jpg"); background-size:cover; background-position:center;  }
+.box2 { grid-area: box2; background: #D7D6D7; background-image: url("src/assets/images/capguy.jpg"); background-size:cover; background-position:center; z-index: 10; }
 .box3 { grid-area: box3; background: #D7D6D7;background-image: url("src/assets/images/capguy3.jpg"); background-size:cover; background-position:center;  }
 .box4 { grid-area: box4; background: #D7D6D7; background-image: url("src/assets/images/capguy2.jpg"); background-size:cover; background-position:center; }
+
+.circle{
+  background-color: rgba(246, 247, 247, 0.479);
+}
+
+
 
   .bento-box h1{
 padding: 20px;
     font-family: NeueMachina;
     font-size: 3.2rem;
     line-height: 60px;
+  }
+
+  .box4:hover{
+    background-image: url("src/assets/images/capguy2v2.jpg");
+    background-size:cover; 
+    background-position:center;
+    transition: ease-in-out 0.7s;
+    z-index: 10; 
+  }
+  .box3:hover{
+    background-image: url("src/assets/images/cap.jpg");
+    background-size:cover; 
+    background-position:center;
+    transition: ease-in-out 0.9s;
+    z-index: 10; 
   }
 
 
