--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -101,6 +101,13 @@ h5{
   font-size: 14px;
 }
 
+div >p{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: start;
+}
+
 
   .bento-box h1{
 padding: 20px;
